Add new homework7

--- a/Homework5/index.html
+++ b/Homework5/index.html
@@ -1,90 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Muli" />
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Muli" />
+<link rel="stylesheet" href="css/style.css">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trafagal Page</title>
-
+    <!-- a:21:{i:0;s:19:"akismet/akismet.php";i:1;s:17:"booked/booked.php";i:2;s:36:"contact-form-7/wp-contact-form-7.php";i:3;s:34:"custom-sidebars/customsidebars.php";i:4;s:31:"envato-market/envato-market.php";i:5;s:69:"facebook-messenger-customer-chat/facebook-messenger-customer-chat.php";i:6;s:24:"gallery-videos/index.php";i:7;s:33:"instagram-feed/instagram-feed.php";i:8;s:37:"mailchimp-for-wp/mailchimp-for-wp.php";i:9;s:25:"mwt-addons/mwt-addons.php";i:10;s:27:"mwt-helpers/mwt-helpers.php";i:11;s:47:"mwt-unyson-extensions/mwt-unyson-extensions.php";i:12;s:27:"mwt-widgets/mwt-widgets.php";i:13;s:24:"rev-slider/revslider.php";i:14;s:26:"snazzy-maps/snazzymaps.php";i:15;s:37:"translatepress-multilingual/index.php";i:16;s:46:"under-construction-page/under-construction.php";i:17;s:17:"unyson/unyson.php";i:18;s:67:"video-embed-thumbnail-generator/video-embed-thumbnail-generator.php";i:19;s:24:"wordpress-seo/wp-seo.php";i:20;s:33:"wp-user-avatar/wp-user-avatar.php";} -->
 
 </head>
 
 <body>
-    <div id ="main">
-    <section class="header">
-        <img class="image" alt="image" src="img/logo (1).png">
-        <div class="menu">
-            <ul>
-                <li><a href="#">Home</a>
+    <div id="main">
+        <section class="header">
+            <img class="image" alt="image" src="img/logo (1).png">
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a>
 
-                </li>
-                <li><a href="#services">Services</a>
+                    </li>
+                    <li><a href="#services">Services</a>
 
-                </li>
-                <li><a href="#apps">Apps</a>
+                    </li>
+                    <li><a href="#apps">Apps</a>
 
-                </li>
-                <li><a href="#about-us">About Us</a>
+                    </li>
+                    <li><a href="#about-us">About Us</a>
 
-                </li>
-            </ul>
-        </div>
-        <img class="left-img" src="img/element (1).png">
-    </section>
+                    </li>
+                </ul>
+            </div>
+            <img class="left-img" src="img/element (1).png">
+        </section>
 
-    <div class="content">
-        <div class="text">
+        <div class="content">
+            <div class="text">
                 <h1>Virtual healthcare for you</h1>
                 <span>Trafalgar provides progressive, and affordable
                     healthcare, accessible on mobile and online
                     for everyone</span>
-<br>
-                    <button>Consult today</button>
-        </div>
-
-    <div class ="service-image">
-        <img src="img/illustration.svg">
+                <br>
+                <button>Consult today</button>
             </div>
-</div>
 
-    <section id="services">
-        <div class="services">
-
-            <h2>Our Services</h2>
-            <hr>
-            <p class ="service-desc">We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+            <div class="service-image">
+                <img src="img/illustration.svg">
+            </div>
         </div>
-        <div  class="service-background">
-        <table class="service-box">
-            <tr><td class="box"><img class="zoom"src="img/Framezoom.svg">
-            <h3>Search doctor</h3>
-            <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
-            </td>
-                <td class="box"><img class="zoom" src="img/Framebox.svg">
-                <h3>Online pharmacy</h3>
-                <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-                </td><td class="box"><img class="zoom" src="img/Framebox.svg">
-                    <h3>Online pharmacy</h3>
-                    <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-                   </td></tr>
-            <tr><td class="box"><img class="zoom" src="img/Framebox.svg">
-                <h3>Online pharmacy</h3>
-                <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-               </td><td class="box"><img class="zoom" src="img/Framebox.svg">
-                <h3>Online pharmacy</h3>
-                <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-               </td><td class="box"><img class="zoom" src="img/Framebox.svg">
-                <h3>Online pharmacy</h3>
-                <p>Buy  your medicines with our mobile application with a simple delivery system</p>
-               </td></tr>
-        </table>
+
+        <section id="services">
+            <div class="services">
+
+                <h2>Our Services</h2>
+                <hr>
+                <p class="service-desc">We provide to you the best choiches for you. Adjust it to your health needs and
+                    make sure your undergo treatment with our highly qualified doctors you can consult with us which
+                    type of service is suitable for your health</p>
+            </div>
+            <div class="service-background">
+                <table class="service-box">
+                    <tr>
+                        <td class="box"><img class="zoom" src="img/Framezoom.svg">
+                            <h3>Search doctor</h3>
+                            <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+                        </td>
+                        <td class="box"><img class="zoom" src="img/Framebox.svg">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </td>
+                        <td class="box"><img class="zoom" src="img/Framebox.svg">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="box"><img class="zoom" src="img/Framebox.svg">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </td>
+                        <td class="box"><img class="zoom" src="img/Framebox.svg">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </td>
+                        <td class="box"><img class="zoom" src="img/Framebox.svg">
+                            <h3>Online pharmacy</h3>
+                            <p>Buy your medicines with our mobile application with a simple delivery system</p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </div>
-    </section>
-</div>
     <br>
 
-<footer></footer>
+    <footer>
+        <div class="column1"><img class="footer-img" src="img/Trafalgarfooter.png"></div>
+        <div class="column2"><span>Footer</span></div>
+        <div class="column3"></div>
+    </footer>
 </body>
 
 </html>
