make design fro mobile

--- a/Homework7/index.html
+++ b/Homework7/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg></script>
@@ -17,6 +19,8 @@
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
 </ul>
+ 
+
 </nav>
      <img src="images/Landie.png" class="logo">
      <button class="buy">Buy Now</button>
