--- a/Homework9-bootstrap/contact-us.html
+++ b/Homework9-bootstrap/contact-us.html
@@ -9,11 +9,25 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
 <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js" data-auto-replace-svg></script>
 <link rel="stylesheet" href="css/form.css">
+<link rel="stylesheet" href="css/main.css">
 <head>
     <title>Design with bootstrap</title>
 </head>
 
 <body>
+        <header>
+                <nav>
+                    <ul>
+                    <li><a href="#">Home</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="contact-us.html">Contact</a></li>
+           </ul>
+            
+
+           </nav>
+                <img src="images/Landie.png" class="logo">
+                <button class="buy">Buy Now</button>
+            </header>
         <div class="form4 top">
 
                 <div class="container">
