--- a/Homework9-bootstrap/contact-us.html
+++ b/Homework9-bootstrap/contact-us.html
@@ -18,7 +18,7 @@
         <header>
                 <nav>
                     <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/Homework9-bootstrap/index.html">Home</a></li>
                <li><a href="#">About</a></li>
                <li><a href="contact-us.html">Contact</a></li>
            </ul>
@@ -41,6 +41,11 @@
                                     <div class="form-group"> <label class="sr-only">Name</label> <textarea class="form-control" required="" rows="7" id="messageNine" placeholder="Write message"></textarea> </div> <button type="submit" class="btn text-center btn-blue">Send Message</button>
                                 </form>
 
+                        </div>
+                        <div class= col-md-5>
+                            <h1>Find Us here</h1>
+                                <div><i class="fas fa-thumbtack"></i> <span class="address">Rruga: "Abdly Frasheri, EGT, Tower"</div>
+                                <div><i class="fas fa-envelope-open-text"></i><span class="address"><a href="mailto:name@email.com">Send Email</a></span></div>
                         </div>
                     </div>
                 </div>
