--- a/Homework9-bootstrap/contact-us.html
+++ b/Homework9-bootstrap/contact-us.html
@@ -38,11 +38,12 @@
                                 <form class="form">
                                     <div class="form-group"> <label class="sr-only">Name</label> <input type="text" class="form-control" required="" id="nameNine" placeholder="Your Name"> </div>
                                     <div class="form-group"> <label class="sr-only">Email</label> <input type="email" class="form-control" required="" id="emailNine" placeholder="Email Address"> </div>
-                                    <div class="form-group"> <label class="sr-only">Name</label> <textarea class="form-control" required="" rows="7" id="messageNine" placeholder="Write message"></textarea> </div> <button type="submit" class="btn text-center btn-blue">Send Message</button>
+                                    <div class="form-group"> <label class="sr-only">Name</label> <textarea class="form-control" required="" rows="7" id="messageNine" placeholder="Write message"></textarea> </div>
+                                    <button type="submit" class="btn text-center btn-blue">Send Message</button>
                                 </form>
 
                         </div>
-                        <div class= col-md-5>
+                        <div class= "text-center col-md-5">
                             <h1>Find Us here</h1>
                                 <div><i class="fas fa-thumbtack"></i> <span class="address">Rruga: "Abdly Frasheri, EGT, Tower"</div>
                                 <div><i class="fas fa-envelope-open-text"></i><span class="address"><a href="mailto:name@email.com">Send Email</a></span></div>
