--- a/Homework-bootstrap/index.html
+++ b/Homework-bootstrap/index.html
@@ -185,44 +185,37 @@
   </div>
 </section>
 
-<!-- Contact Us section -->
+<!-- Start of Contact Us section -->
 
 <section id="contact" class="contact">
-    <div class="container aos-init aos-animate" data-aos="fade-up">
-
+    <div class="container">
       <div class="section-title">
-        <h2>Contact</h2>
+        <h2>Contact US</h2>
       </div>
 
       <div class="row mt-1">
-
         <div class="col-lg-4">
-          <div class="info">
+          <div class="informations">
             <div class="address">
-              <i class="icofont-google-map"></i>
+              <i class="fas fa-map-marker-alt"></i>
               <h4>Location:</h4>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>A1001 Tesr, New York, NY 535022</p>
             </div>
-
             <div class="email">
-              <i class="icofont-envelope"></i>
+                <i class="far fa-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p>info@admin.com</p>
             </div>
-
             <div class="phone">
-              <i class="icofont-phone"></i>
+                <i class="fas fa-phone-alt"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <p>+1 123 123 1234</p>
             </div>
-
           </div>
 
         </div>
-
         <div class="col-lg-8 mt-5 mt-lg-0">
-
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form class="forma-contact">
             <div class="form-row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
@@ -241,11 +234,7 @@
               <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
               <div class="validate"></div>
             </div>
-            <div class="mb-3">
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-            </div>
+
             <div class="text-center"><button class="btn btn-primary" type="submit">Submit</button></div>
           </form>
 
@@ -256,9 +245,9 @@
     </div>
   </section>
 
+<!-- Contact Us section End -->
 
-
-
+<!--- Start of Footer -->
       <footer id="footer">
         <div class="footer-top">
           <div class="container">
@@ -323,7 +312,8 @@
             &copy; Copyright <strong><span>Scaffold</span></strong>. All Rights Reserved
           </div>
         </div>
-      </footer><!-- End Footer -->
+      </footer>
+      <!-- End Footer -->
 </body>
 
 </html>
