--- a/Homework-bootstrap/index.html
+++ b/Homework-bootstrap/index.html
@@ -248,28 +248,30 @@
 
 <!--- Start of Footer -->
       <footer id="footer">
-
-
         <div class="container">
-            <div class="footer-info">
-                <h3>Scaffold</h3>
-                <p>
-                  Rruga Abdyl Frasheri <br>
-                 EGT Tower, Albania<br><br>
-                  <strong>Phone:</strong> +1 5589 55488 55<br>
-                  <strong>Email:</strong> <a href="#">info@email.al</a><br>
-                </p>
-                <div class="social-links mt-3">
-                  <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                  <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                  <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                  <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                  <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <div class="row">
+
+              <div class="footer-info">
+                  <h3>TechIn</h3>
+                  <p>
+                    Rruga Abdyl Frasheri <br>
+                   EGT Tower, Albania<br><br>
+                    <strong>Phone:</strong> +1 5589 55488 55<br>
+                    <strong>Email:</strong> <a href="#">info@email.al</a><br>
+                  </p>
+                  <div class="social-links mt-3">
+                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                    <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                  </div>
                 </div>
-              </div>
-          <div class="copyright">
-            &copy; Copyright <strong><span>Scaffold</span></strong>. All Rights Reserved
+            <div class="copyright">
+              &copy; Copyright <strong><span>TechIn</span></strong>. All Rights Reserved
+            </div>
           </div>
+
         </div>
       </footer>
       <!-- End Footer -->
