--- a/Homework-bootstrap/index.html
+++ b/Homework-bootstrap/index.html
@@ -247,33 +247,23 @@
 <!-- Contact Us section End -->
 
 <!--- Start of Footer -->
-      <footer id="footer">
-        <div class="container">
-          <div class="row">
+<footer id="footer">
+    <div class="container">
+      <h3>We are TechIn</h3>
+      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <div class="copyright">
+        © Copyright <strong><span>IrisD</span></strong>. All Rights Reserved
+      </div>
 
-              <div class="footer-info">
-                  <h3>TechIn</h3>
-                  <p>
-                    Rruga Abdyl Frasheri <br>
-                   EGT Tower, Albania<br><br>
-                    <strong>Phone:</strong> +1 5589 55488 55<br>
-                    <strong>Email:</strong> <a href="#">info@email.al</a><br>
-                  </p>
-                  <div class="social-links mt-3">
-                    <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                    <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                    <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                    <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                    <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                  </div>
-                </div>
-            <div class="copyright">
-              &copy; Copyright <strong><span>TechIn</span></strong>. All Rights Reserved
-            </div>
-          </div>
-
-        </div>
-      </footer>
+    </div>
+  </footer>
       <!-- End Footer -->
 </body>
 
