--- a/Homework-bootstrap/index.html
+++ b/Homework-bootstrap/index.html
@@ -23,6 +23,9 @@
   <link href="css/ionicons.min.css" rel="stylesheet">
 </head>
 <body>
+    <button type="button" class="mobile-nav-toggle d-lg-none">
+        <i class="fas fa-bars"></i>
+    </button>
     <header id="header" class="fixed-top">
         <div class="container d-flex">
           <div class="logo mr-auto">
@@ -39,6 +42,7 @@
 
             </ul>
           </nav>
+
           <div class="header-social-links">
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -252,19 +256,17 @@
       <h3>We are TechIn</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
       </div>
       <div class="copyright">
         © Copyright <strong><span>IrisD</span></strong>. All Rights Reserved
       </div>
-
+      <a class="sr-only sr-only-focusable" href="#content">Skip to main content</a>
     </div>
   </footer>
       <!-- End Footer -->
 </body>
-
 </html>
