--- a/Javascript-exercises/index.html
+++ b/Javascript-exercises/index.html
@@ -27,8 +27,10 @@
                     </div>
 
                 </div>
+
+                <a href="#" id="clear" class="mt-2 btn btn-primary">Clear All</a>
             </div>
-            <a href="#" id="clear" class="btn btn-primary">Clear All</a>
+
         </div>
     </div>
 
